--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9,<3.10"
 license = {text = "MIT"}
 authors = [
-    {name = "Mem Team", email = "team@mem.dev"},
+    {name = "Spencer Delcore", email = ""},
 ]
 
 dependencies = [
@@ -14,15 +14,16 @@ dependencies = [
     "numpy>=1.24.0,<2",
     "pydantic>=2.0.0",
     "pillow>=10.0.0",
-    "click>=8.1.0",
     "openai-whisper",
     "numba>=0.56.0",
-    "rich>=13.0.0",
     "pyyaml>=6.0.1",
+    "duckdb>=0.9.0",
+    "imagehash>=4.3.0",
+    "pytz>=2025.2",
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
+    "python-multipart>=0.0.6",
 ]
-
-[project.scripts]
-mem = "src.cli:cli"
 
 [tool.uv]
 dev-dependencies = [
@@ -34,6 +35,7 @@ dev-dependencies = [
     "ruff>=0.1.0",
     "mypy>=1.5.0",
     "faker>=20.0.0",
+    "httpx>=0.28.1",
 ]
 
 [build-system]
@@ -50,8 +52,10 @@ target-version = ['py39']
 [tool.ruff]
 line-length = 100
 target-version = "py39"
+
+[tool.ruff.lint]
 select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM"]
-ignore = ["E501", "B008"]
+ignore = ["E501", "B008", "B904"]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
