--- a/mem/pyproject.toml
+++ b/mem/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "numpy>=1.24.0,<2",
     "pydantic>=2.0.0",
     "pillow>=10.0.0",
-    "openai-whisper",
+    "faster-whisper>=1.0.0",
     "numba>=0.56.0",
     "pyyaml>=6.0.1",
     "duckdb>=0.9.0",
