--- a/mem/pyproject.toml
+++ b/mem/pyproject.toml
@@ -3,7 +3,7 @@ name = "mem"
 version = "0.1.0"
 description = "Video work tracking system with local AI"
 readme = "README.md"
-requires-python = ">=3.9,<3.10"
+requires-python = ">=3.10,<3.13"
 license = {text = "MIT"}
 authors = [
     {name = "Spencer Delcore", email = ""},
@@ -15,14 +15,17 @@ dependencies = [
     "pydantic>=2.0.0",
     "pillow>=10.0.0",
     "faster-whisper>=1.0.0",
-    "numba>=0.56.0",
     "pyyaml>=6.0.1",
     "duckdb>=0.9.0",
+    "pytz>=2024.1",
+    "tomli>=2.0.0",
     "imagehash>=4.3.0",
-    "pytz>=2025.2",
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
     "python-multipart>=0.0.6",
+    "PyGObject>=3.42.0,<3.50",
+    "pycairo>=1.20.0,<1.28",
+    "sttd @ git+https://github.com/sdelcore/sttd.git",
 ]
 
 [tool.uv]
@@ -34,7 +37,6 @@ dev-dependencies = [
     "black>=23.0.0",
     "ruff>=0.1.0",
     "mypy>=1.5.0",
-    "faker>=20.0.0",
     "httpx>=0.28.1",
 ]
 
@@ -42,16 +44,19 @@ dev-dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
 [tool.black]
 line-length = 100
-target-version = ['py39']
+target-version = ['py310']
 
 [tool.ruff]
 line-length = 100
-target-version = "py39"
+target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM"]
