--- a/mem-ui/tsconfig.json
+++ b/mem-ui/tsconfig.json
@@ -27,5 +27,6 @@
     }
   },
   "include": ["src"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx", "src/setupTests.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
