--- a/mem-ui/package.json
+++ b/mem-ui/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
