--- a/mem/pyproject.toml
+++ b/mem/pyproject.toml
@@ -14,7 +14,6 @@ dependencies = [
     "numpy>=1.24.0,<2",
     "pydantic>=2.0.0",
     "pillow>=10.0.0",
-    "faster-whisper>=1.0.0",
     "pyyaml>=6.0.1",
     "duckdb>=0.9.0",
     "pytz>=2024.1",
@@ -25,7 +24,8 @@ dependencies = [
     "python-multipart>=0.0.6",
     "PyGObject>=3.42.0,<3.50",
     "pycairo>=1.20.0,<1.28",
-    "sttd @ git+https://github.com/sdelcore/sttd.git",
+    "httpx>=0.28.1",
+    "slowapi>=0.1.9",
 ]
 
 [tool.uv]
