feat: RTMP streaming + STTD integration overhaul
- Rewrote stream_server.py for nginx-rtmp callbacks instead of running own RTMP server
- Added RTMP callback endpoints: /publish, /publish-done, /play, /play-done
- Added frame ingestion endpoint for nginx exec_push
- Updated nginx.conf with on_publish callbacks and exec_push for frame extraction
- Rewrote stream_handler.py to extract JPEG frames via FFmpeg and POST to backend
- Added RTMP_HOST env var support for external hostname configuration

STTD Integration:
- Updated pipeline.py to use STTD HTTP client (removed whisper references)
- Added speaker identification and profile management to sttd_client.py
- Updated config with new audio chunking (60s chunks, 5s overlap)
- Removed whisper section from config files
- Applied lazy DB initialization to services to fix test imports

Tests:
- Rewrote test_pipeline.py and test_transcriber.py for STTD-based transcription
- All pipeline/transcriber tests now pass

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,13 @@ RTMP_PORT=1935
 RTMP_STATS_PORT=8080
 
 # =============================================================================
+# RTMP STREAMING
+# =============================================================================
+# External hostname for RTMP URLs shown to users (for OBS configuration)
+# Set this to your server's public hostname/IP that OBS can connect to
+RTMP_HOST=localhost
+
+# =============================================================================
 # GPU CONFIGURATION (only used when COMPOSE_PROFILES=gpu)
 # =============================================================================
 # GPU device ID (use nvidia-smi to find available GPUs)
