--- a/rtmp/nginx.conf
+++ b/rtmp/nginx.conf
@@ -17,23 +17,22 @@ rtmp {
             live on;
             record off;
 
-            # No recording by default, handled by backend
             # Allow up to 10 concurrent streams
             max_connections 10;
 
-            # When stream starts, notify backend
+            # When stream starts, notify backend to validate stream key
+            # Returns 2xx to allow, anything else rejects
             on_publish http://mem-backend:8000/api/streams/rtmp-callback/publish;
             on_publish_done http://mem-backend:8000/api/streams/rtmp-callback/publish-done;
 
-            # Stream key validation
+            # Stream playback callbacks (allow all for now)
             on_play http://mem-backend:8000/api/streams/rtmp-callback/play;
             on_play_done http://mem-backend:8000/api/streams/rtmp-callback/play-done;
 
-            # Forward to backend for processing
-            exec_push ffmpeg -i rtmp://localhost/live/$name
-                -c:v libx264 -preset veryfast -tune zerolatency
-                -c:a aac -ar 44100 -ac 2
-                -f flv rtmp://mem-backend:8000/api/streams/ingest/$name;
+            # Extract frames and send to backend for processing
+            # The stream_handler.py script extracts JPEG frames using FFmpeg
+            # and POSTs them to the backend's frame ingestion endpoint
+            exec_push /usr/local/bin/stream_handler.py extract_frames $name;
 
             # HLS output for web playback (optional)
             hls on;
